# BinaryGame

./: README.md  bingame  bingame.vala  com.naheel.BinaryGame.json  compile.sh  install.sh  meson.build
.flatpak-builder/cache/refs/heads/x86_64-com.naheel.BinaryGame.json/: init
.flatpak-builder/ccache/2/: stats
.flatpak-builder/ccache/2/3/: 94bc1c2c7bed0ef7cb8451823dd477-2644004.d
.flatpak-builder/ccache/e/: stats
.flatpak-builder/ccache/e/0/: cb3d1c2da6100305a24090228cf24f-2320598.d
.flatpak-builder/checksums/: com.naheel.BinaryGame.json
data/: com.naheel.BinaryGame.appdata.xml.in  com.naheel.BinaryGame.desktop.in  com.naheel.BinaryGame.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: main.vala  meson.build  window.vala
